project/Modules/Network/gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.network.id

  tags = {
    Name = "gateway"
  }
}
