project/Modules/Network/vpc_main.tf
resource "aws_vpc" "network" {
  cidr_block       = "10.0.0.0/16"

  tags = {
    Name = var.netname
  }
}
